--- a/notebooks/stock_analysis.ipynb
+++ b/notebooks/stock_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8422771f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "76aa9d1b",
    "metadata": {},
    "outputs": [],
@@ -30,20 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "c76d6972",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'yfinance'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfetch_data\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_stock_data, save_stock_data\n\u001b[32m      3\u001b[39m df = get_stock_data(\u001b[33m\"\u001b[39m\u001b[33mTCS.NS\u001b[39m\u001b[33m\"\u001b[39m, period=\u001b[33m\"\u001b[39m\u001b[33m1y\u001b[39m\u001b[33m\"\u001b[39m, interval=\u001b[33m\"\u001b[39m\u001b[33m1d\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m df.head()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\sabyasachi\\OneDrive - rbionline\\python hacks\\stock-analyzer\\src\\fetch_data.py:1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myfinance\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myf\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'yfinance'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved OHLC data to: data/processed\\TCS_ohlc.csv\n"
      ]
     }
    ],
@@ -58,32 +53,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0454acd5",
+   "execution_count": 4,
+   "id": "c7aced7f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'yfinance'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myfinance\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'yfinance'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 51 pages\n",
+      "9th Floor Nirmal Building Nariman Point Mumbai 400 021 \n",
+      "Tel 91 22 6778 9595 Fax 91 22 6630 3672 e-mail corporate.office@tcs.com website www.tcs.com \n",
+      "Registered Office 9th Floor Nirmal Building Nariman Point Mumbai 400 021 \n",
+      "Corporate Identity No. (CIN): L22210MH1995PLC084781 \n",
+      "BSE Limited \n",
+      "P. J. Towers,   \n",
+      "Dalal Street, \n",
+      "Mumbai - 400001   \n",
+      "Scrip Code No. 532540 \n",
+      "TCS/SE/13/2025-26 \n",
+      "April 12, 2025 \n",
+      "National Stock Exchange of India Limited \n",
+      "Exchange Plaza, C-1, Block G,\n",
+      " \n",
+      "Bandra Kurla Complex, Bandra\n"
      ]
     }
    ],
    "source": [
-    "import yfinance\n"
+    "from src.fetch_transcripts import load_transcript_texts\n",
+    "\n",
+    "docs = load_transcript_texts()\n",
+    "print(f\"Loaded {len(docs)} pages\")\n",
+    "print(docs[0].page_content[:500])  # Preview first 500 chars\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f61f1cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (venv)",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
